--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test": "node --experimental-vm-modules --no-warnings ./node_modules/jest/bin/jest.js",
     "dev": "nodemon index.js"
   },
   "keywords": [],
@@ -15,11 +15,16 @@
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jest": "^29.7.0",
     "mongoose": "^8.19.3",
     "node-telegram-bot-api": "^0.66.0"
   },
   "devDependencies": {
-    "jest": "^30.2.0",
+    "@jest/globals": "^30.2.0",
     "nodemon": "^3.1.10"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "transform": {}
   }
 }
