--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "jest": "^29.7.0",
     "mongoose": "^8.19.3",
     "node-telegram-bot-api": "^0.66.0"
